--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/tecsystem
     username: root
-    password:
+    password: 1234
   jpa:
     database: MYSQL
     hibernate:
